<resources>
    <string name="app_name">Balance</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="monday_1st_of_may">Mon 14</string>
    <string name="_9_38">9:38</string>
    <string name="app">App</string>
    <string name="phone">Phone</string>
    <string name="_13_48">13:48</string>
    <string name="flight_mode">Flight mode</string>
    <string name="search">Search</string>
    <string name="no_notifications">No Notifications</string>
    <string name="swipe_up_to_unlock">Swipe up to unlock</string>
    <string name="clear_all">Clear All</string>
    <string name="all">All</string>
    <string name="messages">Messages</string>
    <string name="calls">Calls</string>
    <string name="other">Other</string>
    <string name="manage">Manage</string>
    <string name="passcode">Passcode</string>
    <string name="weather_icon">Weather Icon</string>
    <string name="no_moore_events">No moore events</string>
    <string name="app_info">App Info</string>
    <string name="uninstall">Uninstall</string>
    <string name="service_description">Lock screen replacement</string>
    <string name="accessible_service_description">This is accessible service</string>
    <string name="balance">Balance Phone</string>
    <string name="the_phone_for_conscious_humans">The phone for conscious humans</string>
    <string name="launch_now">Launch now</string>
    <string name="continue_">Continue</string>
    <string name="it_s_that_simple">It’s that simple.</string>
    <string name="everything_you_need">Everything you need</string>
    <string name="without_everything_you_don_t_need">Without everything you don’t need.</string>
    <string name="no_news">No news</string>
    <string name="no_social_media">No social media</string>
    <string name="no_games">No games</string>
    <string name="no_betting">No betting</string>
    <string name="no_streaming_services">No streaming services</string>
    <string name="for_specific_information_about_incompatible">For specific information about incompatible apps check our website: www.thebalancephone.com</string>
    <string name="finish">Finish</string>
    <string name="i_m_aware_that_this_step_is_irreversible">I’m aware that this step is irreversible</string>
    <string name="i_ve_read_and_accept_the_terms_and_conditions">I’ve read and accept the <b>terms and conditions</b></string>
    <string name="as_for_the_message_this_app_is">This app is not compatible with the Balance Phone</string>
    <string name="as_for_the_message_this_website_is">This website is not compatible with the Balance Phone</string>
    <string name="close">Close</string>
    <string name="in_order_for_balance_work_proper">In order for Balance work properly,it is necessary to grant it these permissions. Don\'t worry, we don\'t store or share information or data about you or your device anywhere</string>
    <string name="grant_permissions">Grant permissions</string>
    <string name="data_usage_access">Data Usage access</string>
    <string name="this_permission_is_required_for_tracking_and_analyzing_app_usage_to_maintain_digital_well_being">This permission is required for tracking and analyzing app usage to maintain digital well-being.</string>
    <string name="notification_access">Notification access</string>
    <string name="this_permission_is_required_for_unopened_notifications">This permission is required for unopened notifications.</string>
    <string name="this_permission_is_required_for_analyzing">This permission is required for analyzing app usage to maintain digital well-being.</string>
    <string name="enable_appear_on_top">Enable Appear on top</string>
    <string name="this_permission_is_required_to_display">This permission is required to display its content top of other apps.</string>
    <string name="enable_accessibility_service">Enable Accessibility service</string>
    <string name="this_permission_is_required_to_interact_with_content">This permission is required to interact with content of other apps.</string>
    <string name="notification_badge">Notification badge</string>
    <string name="get_started">Get Started</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="back_button">Back Button</string>
    <string name="we_need_you_to_grant_certain_permissions">We need you to grant certain permissions to the Balance Phone app for it to work properly.</string>
    <string name="don_t_worry_we_don_t_track_monitor">Don’t worry! We don’t track data of any kind.</string>
    <string name="enable_data_usage_access">Enable data usage access</string>
    <string name="enable_appear">Enable ‘appear on top’</string>
    <string name="enable_notifications_access">Enable notifications access</string>
    <string name="ready_to_regain_freedom">Ready to regain \nfreedom?</string>
    <string name="set_your_passcode">Set your passcode</string>
    <string name="confirm_your_passcode">Confirm your passcode</string>
    <string name="you_will_need_it_if_you_want_to_delete_the_app">You will need it if you want to delete the app.</string>
    <string name="we_recommend_to_ask_for_someone_you_can_rely_on_to_set_it_for_you">We recommend to ask for someone you can rely on to set it for you.</string>
    <string name="permission_for_restricted_settings">Enable restricted settings</string>
    <string name="accessibility_service_requires_extra_restricted_permission_on_android_13">Accessibility service requires extra restricted permission on Android 13</string>
    <string name="go_to_app_information_settings_click_on_three_dots_or_icon_on_right_top_you_can_allow_restricted_settings_from_there">Go to app information settings. Click on three dots or icon on right top. You can allow restricted settings from there</string>
    <string name="scroll_down_to_the_app_information_settings_allow_restricted_settings_from_there">Scroll down to the app information settings. Allow Restricted settings from there.</string>
    <string name="or">OR</string>
    <string name="open_settings">Open Settings</string>
    <string name="_3_days_free_trial_then_your_payment_will_be_processed_cancel_it_any_time_during_the_free_trial_in_your_device_settings">*3 days free trial, then your payment will be processed. Cancel it any time during the free trial in your device settings.</string>
    <string name="try_it_for_free">Try it for free</string>
    <string name="life_time_access">Life-time access.</string>
    <string name="amount">29.99€</string>
    <string name="one_payment">One payment.</string>
    <string name="submit_a_recovery_email">Submit a recovery email in case you forget your passcode:</string>
    <string name="recovery_email">Recovery Email</string>
    <string name="payment_card">Payment Card</string>
    <string name="can_t_enable_accessibility_check_how_to_allow_restricted_settings"><u>Can’t enable accessibility? Check how to allow restricted settings.</u></string>
    <string name="for_more_information_visit_our_website">For more information visit our website:</string>
    <string name="www_thebalancephone_com">www.thebalancephone.com</string>
    <string name="enter_the_password_if_you_want_to_delete">Enter the password if you want to delete the app. <u>Click here if you forgot your password.</u></string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="enter_your_recovery_email_and_we_ll_send_you_a_password_reset_link">Enter your recovery email and we’ll send you an email with password.</string>
    <string name="dummy">---</string>
    <string name="subscription">Subscription</string>
    <string name="one_time_purchase">One-time purchase</string>
    <string name="let_s_go">Let\'s go!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
</resources>
