<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".ui.fragments.FreedomFragment">


    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/back_button"
        android:src="@drawable/arrow_back"
        app:tint="@color/white"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/tvBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/new_logo"
        android:contentDescription="@string/app_name" />


    <TextView
        android:id="@+id/tvTagline"
        style="@style/NotificationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvBalance"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/the_phone_for_conscious_humans"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tvReady"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/ready_to_regain_freedom"
        android:textColor="@color/white"
        android:textSize="32sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLaunch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/inter_semibold"
        android:textSize="18sp"
        android:paddingStart="25dp"
        android:paddingTop="13dp"
        android:paddingEnd="25dp"
        android:minHeight="48dp"
        android:paddingBottom="13dp"
        android:text="@string/let_s_go"
        android:textColor="@color/black" />


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvReady"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>
