<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".ui.fragments.EmailFragment">


    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/back_button"
        android:src="@drawable/arrow_back"
        app:tint="@color/white" />


    <ImageView
        android:id="@+id/tvBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/new_logo"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvExplanation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/set_your_passcode"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvPrivacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/poppins"
            android:text="@string/you_will_need_it_if_you_want_to_delete_the_app"
            android:textColor="@color/white"
            android:textSize="14sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/poppins"
            android:text="@string/submit_a_recovery_email"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etRecoveryEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="40dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:minHeight="48dp"
            android:background="@drawable/email_back"
            android:inputType="textEmailAddress"
            android:hint="@string/recovery_email"
            android:fontFamily="@font/poppins_light"
            android:textSize="16sp"
            android:textColorHint="@color/hint_color"
            android:textColor="@color/hint_color"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/tvRely"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/poppins"
            android:text="@string/we_recommend_to_ask_for_someone_you_can_rely_on_to_set_it_for_you"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/btnContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/next"
            android:textColor="@color/white"
            android:fontFamily="@font/inter_semibold"
            android:textSize="18sp"/>

        <ImageView
            android:id="@+id/ivNext"
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:src="@drawable/arrow_forward"
            app:tint="@color/white"
            android:contentDescription="@string/next" />

    </LinearLayout>

</RelativeLayout>
