<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".ui.fragments.OnboardingFiveFragment">


    <TextView
        android:id="@+id/tvBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/balance"
        android:layout_centerHorizontal="true"
        style="@style/OnboardingHeading"/>

    <TextView
        android:id="@+id/tvTagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/the_phone_for_conscious_humans"
        android:layout_centerHorizontal="true"
        style="@style/NotificationText"
        android:layout_below="@+id/tvBalance"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="41dp"
        android:layout_below="@+id/tvTagline"
        android:layout_above="@+id/button">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/close" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:text="@string/no_news"
                    android:gravity="center_vertical"
                    style="@style/NotificationText" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/close" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:text="@string/no_social_media"
                    android:gravity="center_vertical"
                    style="@style/NotificationText" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/close" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:text="@string/no_games"
                    android:gravity="center_vertical"
                    style="@style/NotificationText" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/close" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:text="@string/no_streaming_services"
                    android:gravity="center_vertical"
                    style="@style/NotificationText" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/close" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:text="@string/no_betting"
                    android:gravity="center_vertical"
                    style="@style/NotificationText" />

            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:text="@string/for_specific_information_about_incompatible"
                android:gravity="center_vertical"
                style="@style/NotificationText" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:thumb="@drawable/thumb_selector"
                    app:track="@drawable/track_selector"
                    app:thumbTint="@color/switch_thumb_color"
                    app:trackTint="@color/boarding_track_color"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:text="@string/i_m_aware_that_this_step_is_irreversible"
                    android:gravity="center_vertical"
                    style="@style/NotificationText" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:thumb="@drawable/thumb_selector"
                    app:track="@drawable/track_selector"
                    app:thumbTint="@color/switch_thumb_color"
                    app:trackTint="@color/boarding_track_color"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:text="@string/i_ve_read_and_accept_the_terms_and_conditions"
                    android:gravity="center_vertical"
                    style="@style/NotificationText" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:paddingTop="13dp"
        android:paddingBottom="13dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/bottomView"
        android:background="@drawable/boarding_button_back"
        style="@style/NotManage"
        android:text="@string/finish" />

    <View
        android:id="@+id/bottomView"
        android:layout_width="100dp"
        android:layout_height="5dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/bottom_view_back"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
