<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.fragments.OnboardingOneFragment">


    <TextView
        android:id="@+id/tvBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/balance"
        android:layout_centerHorizontal="true"
        style="@style/OnboardingHeading"/>


    <TextView
        android:id="@+id/tvTagline"
        style="@style/NotificationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvBalance"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/the_phone_for_conscious_humans" />

    <ImageView
        android:id="@+id/ivMob"
        android:layout_width="170dp"
        android:layout_height="330dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/mob_temp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLaunch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
       android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/inter_semibold"
        android:textSize="18sp"
        android:paddingStart="25dp"
        android:paddingTop="13dp"
        android:paddingEnd="25dp"
        android:paddingBottom="13dp"
        android:text="@string/get_started"
        android:textColor="@color/black" />



</RelativeLayout>
